--- a/homepage.html
+++ b/homepage.html
@@ -13,6 +13,12 @@
         <a href="homepage.html" class="active">My Reminders</a>
         <a href="#">My Calendar</a>
         <a href="#">Group Calendars</a>
+        {{#if currentUser}}
+        <a href="#" class="logout">Logout</a>
+        {{else}}
+        <a href="join.html">Create Account</a>
+        <a href="index.html">Login</a>
+        {{/if}}
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
 
