added nav bar to calendar pages and removed the starts of meteor

--- a/fullcalendar.html
+++ b/fullcalendar.html
@@ -55,6 +55,13 @@
     </head>
 
     <body> 
+            <div class="topnav" id="myTopnav">
+                    <a href="homepage.html" class="active">My Reminders</a>
+                    <a href="fullcalendar.html">My Calendar</a>
+                    <a href="#">Group Calendars</a>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+                  </div>
+
             <div id='calendar'></div>
     </body>
 </html>
