--- a/homepage.html
+++ b/homepage.html
@@ -12,13 +12,7 @@
     <div class="topnav" id="myTopnav">
         <a href="homepage.html" class="active">My Reminders</a>
         <a href="fullcalendar.html">My Calendar</a>
-        <a href="#">Group Calendars</a>
-        {{#if currentUser}}
-        <a href="#" class="logout">Logout</a>
-        {{else}}
-        <a href="join.html">Create Account</a>
-        <a href="index.html">Login</a>
-        {{/if}}
+        <a href="groupcalendars.html">Group Calendars</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
 
