--- a/notr/client/main.html
+++ b/notr/client/main.html
@@ -1,25 +1,84 @@
 <head>
-  <title>notr</title>
+  <title>Notr</title>
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
-  {{> info}}
+  {{> navbar}}
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+  <template name="navbar">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/" id="notrtitle"><i>Notr</i></a>
+            <button class="hamburger">&#9776;</button>
+            <button class="cross">&#735;</button>
+            <div class="menu">
+              <ul>
+                <a href="/calendar"><li>Calender</li></a>
+                <a href="/notes"><li>Notes</li></a>
+                <a href="/upcoming_events"><li>Upcoming Events</li></a>
+                <a href="/account"><li>Account</li></a>
+                <a href="/settings"><li>Settings</li></a>
+              </ul>
+            </div> 
+          </div>
+          <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-left">
+              <li class><a href="/home">Home</a></li>
+              <li class><a href="/calendar">Calendar</a></li>
+              <li class><a href="/account">Account</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+  </template>
+
+<template name="notr">
+  <div class="container" id="notrContainer">
+  </div>
 </template>
 
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
+<template name="carousel">
+<div id="carousel">
+<div>Welcome to Notr!</div>
+<div>Share notes!</div>
+<div>Collaborate with others!</div>
+</div>
+</template>
+
+<template name="home">
+  <div class="homecontainer container" id="homeContainer">
+   <div id="homeImage">
+        {{> carousel}}
+    </div>
+  </div>
+</template> 
+
+<template name="calendar">
+    <div class="calendarcontainer container" id="calendarContainer">
+     <div id="calendar">
+          Calendar
+      </div>
+    </div>
+  </template> 
+
+<template name="account">
+  <div class="accountcontainer container" id="accountContainer">
+    <div id="accountImage">
+    </div>
+    <div id="accountName">
+      Hank Hill
+    </div>
+    <div id="accountBio">
+      I sell propane and propane accessories.
+    </div>
+  </div>
 </template>
