--- a/notr/client/main.html
+++ b/notr/client/main.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Notr</title>
+  <title>Calendr</title>
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 </head>
 
@@ -17,12 +17,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/" id="notrtitle"><i>Notr</i></a>
+            <a class="navbar-brand" href="/" id="notrtitle"><i>Calendr</i></a>
             <button class="hamburger">&#9776;</button>
             <button class="cross">&#735;</button>
             <div class="menu">
               <ul>
-                <a href="/calendar"><li>Calender</li></a>
+                <a href="/calendar"><li>Calendr</li></a>
                 <a href="/notes"><li>Notes</li></a>
                 <a href="/upcoming_events"><li>Upcoming Events</li></a>
                 <a href="/account"><li>Account</li></a>
@@ -33,7 +33,7 @@
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-left">
               <li class><a href="/home">Home</a></li>
-              <li class><a href="/calendar">Calendar</a></li>
+              <li class><a href="/calendar">Calendr</a></li>
               <li class><a href="/account">Account</a></li>
               <li class><a href="/groups">Groups</a></li>
             </ul>
@@ -49,7 +49,7 @@
 
 <template name="carousel">
 <div id="carousel">
-<div>Welcome to Notr!</div>
+<div>Welcome to Calendr!</div>
 <div>Share notes!</div>
 <div>Collaborate with others!</div>
 </div>
@@ -66,7 +66,7 @@
 <template name="calendar">
     <div class="calendarcontainer container" id="calendarContainer">
      <div id="calendar">
-          Calendar
+          Calendr
       </div>
     </div>
   </template> 
