--- a/notr/client/main.html
+++ b/notr/client/main.html
@@ -18,17 +18,6 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/" id="notrtitle"><i>Calendr</i></a>
-            <button class="hamburger">&#9776;</button>
-            <button class="cross">&#735;</button>
-            <div class="menu">
-              <ul>
-                <a href="/calendar"><li>Calendr</li></a>
-                <a href="/notes"><li>Notes</li></a>
-                <a href="/upcoming_events"><li>Upcoming Events</li></a>
-                <a href="/account"><li>Account</li></a>
-                <a href="/settings"><li>Settings</li></a>
-              </ul>
-            </div> 
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-left">
@@ -36,6 +25,7 @@
               <li class><a href="/calendar">Calendr</a></li>
               <li class><a href="/account">Account</a></li>
               <li class><a href="/groups">Groups</a></li>
+              <li class><a href="/about">About</a></li>
             </ul>
           </div>
         </div>
@@ -50,7 +40,7 @@
 <template name="carousel">
 <div id="carousel">
 <div>Welcome to Calendr!</div>
-<div>Share notes!</div>
+<div>Create Calendrs!</div>
 <div>Collaborate with others!</div>
 </div>
 </template>
@@ -119,3 +109,29 @@
     </div>
   </div>
 </template>
+
+<template name="about">
+  <div class="aboutContainer container" id="aboutContainer">
+   <div id="about">
+    <p>About</p>
+    <a href="/individualGroup"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"></a>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
+    <p class="left">Group #1 </p>
+    <p class="middle">Group #2 </p>
+    <p class="right">Group #3</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
+    <p class="left">Group #4 </p>
+    <p class="middle">Group #5</p>
+    <p class="right">Group #6 </p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
+    <p class="left">Group #7 </p>
+    <p class="middle">Group #8 </p>
+    <p class="right">Group #9 </p>
+    </div>
+  </div>
+</template> 
