--- a/Notr/Notr/client/about.html
+++ b/Notr/Notr/client/about.html
@@ -1,3 +1,8 @@
+<head>
+  <link rel="stylesheet" href="main.css"/>
+</head>
+
+
 <template name="about">
   <div class="aboutContainer container" id="aboutContainer">
    <div id="about">
