linked all of the pages to main.css to make sure that all pages had css

--- a/Notr/Notr/client/carousel.html
+++ b/Notr/Notr/client/carousel.html
@@ -1,3 +1,8 @@
+<head>
+    <link rel="stylesheet" href="main.css"/>
+</head>
+  
+  
 <template name="carousel">
 <div id="carousel">
 <div>Welcome to Calendr!</div>
