--- a/Notr/Notr/client/groups.html
+++ b/Notr/Notr/client/groups.html
@@ -1,3 +1,8 @@
+<head>
+  <link rel="stylesheet" href="main.css"/>
+</head>
+
+
 <template name="groups">
     <div class="groupcontainer container" id="groupContainer">
      <div id="group">
