--- a/Notr/Notr/client/individualGroup.html
+++ b/Notr/Notr/client/individualGroup.html
@@ -1,3 +1,8 @@
+<head>
+  <link rel="stylesheet" href="main.css"/>
+</head>
+
+
 <template name="individualGroup">
   <div class="individualGroupContainer container" id="individualGroupContainer">
     <div id="group">
