--- a/Notr/Notr/client/calendar.html
+++ b/Notr/Notr/client/calendar.html
@@ -1,3 +1,8 @@
+<head>
+  <link rel="stylesheet" href="main.css"/>
+</head>
+
+
 <template name="calendar">
     <div class="calendarcontainer container" id="calendarContainer">
      <div id="calendar">
