--- a/Notr/Notr/client/home.html
+++ b/Notr/Notr/client/home.html
@@ -1,3 +1,8 @@
+<head>
+  <link rel="stylesheet" href="main.css"/>
+</head>
+
+
 <template name="home">
   <div class="homecontainer container" id="homeContainer">
    <div id="homeImage">
