--- a/Notr/Notr/client/navbar.html
+++ b/Notr/Notr/client/navbar.html
@@ -1,3 +1,8 @@
+<head>
+  <link rel="stylesheet" href="main.css"/>
+</head>
+
+
   <template name="navbar">
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
