--- a/Notr/Notr/client/notr.html
+++ b/Notr/Notr/client/notr.html
@@ -1,3 +1,8 @@
+<head>
+  <link rel="stylesheet" href="main.css"/>
+</head>
+
+
 <template name="notr">
   <div class="container" id="notrContainer">
   </div>
