--- a/Notr/Notr/client/about.html
+++ b/Notr/Notr/client/about.html
@@ -7,7 +7,7 @@
   <div class="aboutContainer container" id="aboutContainer">
    <div id="about">
     <p>About</p>
-    <img src="/images/Alvin.jpeg" id="aboutImage">
+    <div class="border"><img src="/images/Alvin.jpeg" id="aboutImage"></div>
     <img src="/images/Cooper.jpeg" id="aboutImage">
     <img src="/images/Grace.jpeg" id="aboutImage">
     <p class="left">Alvin<br>Top 5:<br>Analytical<br>Relator<br>Responsibility<br>Restorative<br>Developer</p>
