--- a/Notr/Notr/client/groups.html
+++ b/Notr/Notr/client/groups.html
@@ -4,23 +4,23 @@
 
 
 <template name="groups">
-    <div class="groupcontainer container" id="groupContainer">
+    <div class="groupcontainerer" id="groupContainer">
      <div id="group">
-  <a href="/individualGroup"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"></a>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
+  <a href="/individualGroup"><img src="/images/G1.png"></a>
+  <img src="/images/G2.png">
+  <img src="/images/G3.png">
   <p class="left">Group #1 </p>
   <p class="middle">Group #2 </p>
   <p class="right">Group #3</p>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
+  <img src="/images/G4.png">
+  <img src="/images/G5.png">
+  <img src="/images/G6.png">
   <p class="left">Group #4 </p>
   <p class="middle">Group #5</p>
   <p class="right">Group #6 </p>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
+  <img src="/images/G7.png">
+  <img src="/images/G8.png">
+  <img src="/images/G9.png">
   <p class="left">Group #7 </p>
   <p class="middle">Group #8 </p>
   <p class="right">Group #9 </p>
