updated cooper's top 5. Also messed with about page spacing, but I still need help with margins and things

--- a/Notr/Notr/client/about.html
+++ b/Notr/Notr/client/about.html
@@ -7,11 +7,11 @@
   <div class="aboutContainer container" id="aboutContainer">
    <div id="about">
     <p>About</p>
-    <img src="/images/Alvin.jpeg" id="aboutImage">
-    <img src="/images/Cooper.jpeg" id="aboutImage">
-    <img src="/images/Grace.jpeg" id="aboutImage">
+    <img src="/images/Alvin.jpeg" id="aboutImage" class="left">
+    <img src="/images/Cooper.jpeg" id="aboutImage" class="middle">
+    <img src="/images/Grace.jpeg" id="aboutImage" class="right">
     <p class="left">Alvin<br>Top 5:<br>Analytical<br>Relator<br>Responsibility<br>Restorative<br>Developer</p>
-    <p class="middle">Cooper<br>Top 5:<br>Weird<br>Dumb<br>Unhelpful<br>Annoying<br>Purple</p>
+    <p class="middle">Cooper<br>Top 5:<br>Competition<br>Input<br>Learner<br>Achiever<br>Intellection</p>
     <p class="right">Grace<br>Top 5:<br>Futuristic<br>Competition<br>Achiever<br>Maximizer<br>Focus</p>
     <img src="/images/Emma.jpg" id="aboutImage">
     <img src="/images/Michael.jpeg" id="aboutImage">
