Fixed about page because Emma is dumb.

--- a/Notr/Notr/client/about.html
+++ b/Notr/Notr/client/about.html
@@ -7,18 +7,34 @@
   <div class="aboutContainer container" id="aboutContainer">
    <div id="about">
     <p>About</p>
-    <img src="/images/Alvin.jpeg" id="aboutImage" class="left">
-    <img src="/images/Cooper.jpeg" id="aboutImage" class="middle">
-    <img src="/images/Grace.jpeg" id="aboutImage" class="right">
-    <p class="left">Alvin<br>Top 5:<br>Analytical<br>Relator<br>Responsibility<br>Restorative<br>Developer</p>
-    <p class="middle">Cooper<br>Top 5:<br>Competition<br>Input<br>Learner<br>Achiever<br>Intellection</p>
-    <p class="right">Grace<br>Top 5:<br>Futuristic<br>Competition<br>Achiever<br>Maximizer<br>Focus</p>
-    <img src="/images/Emma.jpg" id="aboutImage">
-    <img src="/images/Michael.jpeg" id="aboutImage">
-    <img src="/images/Ryan.jpeg" id="aboutImage">
-    <p class="left">Emma<br>Top 5:<br>Individualization<br>Futuristic<br>Strategic<br>Achiever<br>Maximizer</p>
-    <p class="middle">Michael<br>Top 5:<br>Achiever<br>Competition<br>Responsibility<br>Learner<br>Ideation</p>
-    <p class="right">Ryan<br>Top 5:<br>Achiever<br>Relator<br>Learner<br>Strategic<br>Ideation</p>
+    <div class="row">
+        <div class="col-md-4">
+            <img src="/images/Alvin.jpeg" id="aboutImage">
+            <p>Alvin<br>Top 5:<br>Analytical<br>Relator<br>Responsibility<br>Restorative<br>Developer</p>
+        </div>
+        <div class="col-md-4">
+            <img src="/images/Cooper.jpeg" id="aboutImage">
+            <p>Cooper<br>Top 5:<br>Competition<br>Input<br>Learner<br>Achiever<br>Intellection</p>
+        </div>
+        <div class="col-md-4">
+            <img src="/images/Grace.jpeg" id="aboutImage">
+            <p>Grace<br>Top 5:<br>Futuristic<br>Competition<br>Achiever<br>Maximizer<br>Focus</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <img src="/images/Emma.jpg" id="aboutImage">
+            <p>Emma<br>Top 5:<br>Individualization<br>Futuristic<br>Strategic<br>Achiever<br>Maximizer</p>
+        </div>
+        <div class="col-md-4">
+            <img src="/images/Michael.jpeg" id="aboutImage">
+            <p>Michael<br>Top 5:<br>Achiever<br>Competition<br>Responsibility<br>Learner<br>Ideation</p>
+        </div>
+        <div class="col-md-4">
+            <img src="/images/Ryan.jpeg" id="aboutImage">
+            <p>Ryan<br>Top 5:<br>Achiever<br>Relator<br>Learner<br>Strategic<br>Ideation</p>
+        </div>
+    </div>
     </div>
   </div>
-</template> 
+</template>
