fixed group pages spacing

--- a/Notr/Notr/client/groups.html
+++ b/Notr/Notr/client/groups.html
@@ -6,24 +6,17 @@
 <template name="groups">
     <div class="groupcontainer container" id="groupContainer">
      <div id="group">
-  <a href="/individualGroup"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"></a>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <p class="left">Group #1 </p>
-  <p class="middle">Group #2 </p>
-  <p class="right">Group #3</p>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <p class="left">Group #4 </p>
-  <p class="middle">Group #5</p>
-  <p class="right">Group #6 </p>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png">
-  <p class="left">Group #7 </p>
-  <p class="middle">Group #8 </p>
-  <p class="right">Group #9 </p>
+       <div class="row">
+  <div class="col-md-4"><a href="/individualGroup"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"></a><p>Group #1 </p></div>
+  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #2 </p>  </div>
+  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #3</p></div>
+  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #4 </p></div>
+  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #5</p></div>
+  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #6 </p></div>
+  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #7 </p></div>
+  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #8 </p></div>
+  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #9 </p></div>
       </div>
+    </div>
     </div>
   </template>
