--- a/Notr/Notr/imports/ui/scheduler/scheduler.html
+++ b/Notr/Notr/imports/ui/scheduler/scheduler.html
@@ -1,4 +1,5 @@
 <template name="scheduler">
+    <div class = "calendar">
     <div id="scheduler_here" class="dhx_cal_container" style='width:100%; height:600px;'>
       <div class="dhx_cal_navline">
       <div class="dhx_cal_prev_button">&nbsp;</div>
@@ -14,4 +15,5 @@
       <div class="dhx_cal_data">
       </div>
   </div>
+  </div>>
 </template>
