--- a/Notr/Notr/client/about.html
+++ b/Notr/Notr/client/about.html
@@ -6,33 +6,40 @@
 <template name="about">
   <div class="aboutContainer container" id="aboutContainer">
    <div id="about">
-    <p>About</p>
+    <h1>Our Team</h1>
     <div class="row">
         <div class="col-md-4">
-            <img src="/images/Alvin.jpeg" id="aboutImage">
-            <p>Alvin<br>Top 5:<br>Analytical<br>Relator<br>Responsibility<br>Restorative<br>Developer</p>
+            <img src="/images/Alvin.jpeg" id="aboutImage"><br>
+            <p class="namea">Alvin</p>
+            <p class="top5">Analytical<br>Relator<br>Responsibility<br>Restorative<br>Developer</p>
         </div>
         <div class="col-md-4">
-            <img src="/images/Cooper.jpeg" id="aboutImage">
-            <p>Cooper<br>Top 5:<br>Competition<br>Input<br>Learner<br>Achiever<br>Intellection</p>
+            <img src="/images/Cooper.jpeg" id="aboutImage"><br>
+            <p class="namea">Cooper</p>
+            <p class="top5">Competition<br>Input<br>Learner<br>Achiever<br>Intellection</p>
         </div>
         <div class="col-md-4">
-            <img src="/images/Grace.jpeg" id="aboutImage">
-            <p>Grace<br>Top 5:<br>Futuristic<br>Competition<br>Achiever<br>Maximizer<br>Focus</p>
+            <img src="/images/Grace.jpg" id="aboutImage"><br>
+            <p class="namea">Grace</p>
+            <p class="top5">Futuristic<br>Competition<br>Achiever<br>Maximizer<br>Focus</p>
         </div>
     </div>
+    <br>
     <div class="row">
         <div class="col-md-4">
-            <img src="/images/Emma.jpg" id="aboutImage">
-            <p>Emma<br>Top 5:<br>Individualization<br>Futuristic<br>Strategic<br>Achiever<br>Maximizer</p>
+            <img src="/images/Emma.jpg" id="aboutImage"><br>
+            <p class="namea">Emma</p>
+            <p class="top5">Individualization<br>Futuristic<br>Strategic<br>Achiever<br>Maximizer</p>
         </div>
         <div class="col-md-4">
-            <img src="/images/Michael.jpeg" id="aboutImage">
-            <p>Michael<br>Top 5:<br>Achiever<br>Competition<br>Responsibility<br>Learner<br>Ideation</p>
+            <img src="/images/Michael.jpeg" id="aboutImage"><br>
+            <p class="namea">Michael</p>
+            <p class="top5">Achiever<br>Competition<br>Responsibility<br>Learner<br>Ideation</p>
         </div>
         <div class="col-md-4">
-            <img src="/images/Ryan.jpeg" id="aboutImage">
-            <p>Ryan<br>Top 5:<br>Achiever<br>Relator<br>Learner<br>Strategic<br>Ideation</p>
+            <img src="/images/Ryan.jpeg" id="aboutImage"><br>
+            <p class="namea">Ryan</p>
+            <p class="top5">Achiever<br>Relator<br>Learner<br>Strategic<br>Ideation</p>
         </div>
     </div>
     </div>
