--- a/Notr/Notr/client/account.html
+++ b/Notr/Notr/client/account.html
@@ -2,11 +2,12 @@
   <div class="accountcontainer container" id="accountContainer">
     <div id="accountImage">
     </div>
-    <div id="accountName">
-      Hank Hill
-    </div>
-    <div id="accountBio">
-      I sell propane and propane accessories.
-    </div>
+    <form>
+        Username:<br>
+        <input type="text" name="username"><br>
+        Password:<br>
+        <input type="text" name="password">
+        <button href="/calendar" type="button"><a href="/calendar">Submit</a></button>
+    </form>
   </div>
 </template>
