--- a/Notr/Notr/client/groups.html
+++ b/Notr/Notr/client/groups.html
@@ -15,8 +15,8 @@
   <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #6 </p></div>
   <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #7 </p></div>
   <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #8 </p></div>
-  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #9 </p></div>
+  <div class="col-md-4"><a href="/add"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Add Group </p></a></div>
       </div>
     </div>
     </div>
-  </template>
+</template>
