--- a/Notr/Notr/client/home.html
+++ b/Notr/Notr/client/home.html
@@ -9,4 +9,18 @@
         {{> carousel}}
     </div>
   </div>
+  <!-- <div class="row">
+      <div class="col-md-4" id="upcoming">
+          <h2 class="upcoming-title">GETHIP Presentations</h2>
+          <p class="upcoming-info">Click for more information!</p>
+      </div>
+      <div class="col-md-4" id="upcoming">
+          <h2 class="upcoming-title">Taylor Swift Concert</h2>
+          <p class="upcoming-info">Click for more information!</p>   
+      </div>
+      <div class="col-md-4" id="upcoming">
+          <h2 class="upcoming-title">UNO Basketball Game</h2>
+          <p class="upcoming-info">Click for more information!</p>  
+      </div>
+  </div> -->
 </template>
