--- a/Notr/Notr/client/groups.html
+++ b/Notr/Notr/client/groups.html
@@ -7,15 +7,15 @@
     <div class="groupcontainer container" id="groupContainer">
      <div id="group">
        <div class="row">
-  <div class="col-md-4"><a href="/individualGroup"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"></a><p>Group #1 </p></div>
-  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #2 </p>  </div>
-  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #3</p></div>
-  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #4 </p></div>
-  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #5</p></div>
-  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #6 </p></div>
-  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #7 </p></div>
-  <div class="col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Group #8 </p></div>
-  <div class="col-md-4"><a href="/add"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/2000px-Circle_-_black_simple.svg.png"><p>Add Group </p></a></div>
+  <div class="col-md-4"><a href="/individualGroup"><img src="/images/G1.png" id="groupImage"></a><p>Group #1</p></div>
+  <div class="col-md-4"><img src="/images/G2.png" id="groupImage"><p>Group #2 </p>  </div>
+  <div class="col-md-4"><img src="/images/G3.png" id="groupImage"><p>Group #3</p></div>
+  <div class="col-md-4"><img src="/images/G4.png" id="groupImage"><p>Group #4 </p></div>
+  <div class="col-md-4"><img src="/images/G5.png" id="groupImage"><p>Group #5</p></div>
+  <div class="col-md-4"><img src="/images/G6.png" id="groupImage"><p>Group #6 </p></div>
+  <div class="col-md-4"><img src="/images/G7.png" id="groupImage"><p>Group #7 </p></div>
+  <div class="col-md-4"><img src="/images/G8.png" id="groupImage"><p>Group #8 </p></div>
+  <div class="col-md-4"><a href="/add"><img src="/images/G9.png" id="groupImage"><p>Add Group </p></a></div>
       </div>
     </div>
     </div>
