--- a/Notr/Notr/client/individualGroup.html
+++ b/Notr/Notr/client/individualGroup.html
@@ -6,9 +6,11 @@
 <template name="individualGroup">
   <div class="individualGroupContainer container" id="individualGroupContainer">
     <div id="group">
-      <p>Group #1</p>
+      <p>Group #1 Mathematics</p>
+      <br/>
       <p>Members of this group:</p>
       <p>Bob, Sue, Joe, Phil</p>
+      <br/>
       <a href = "/groups"><button>Back</button></a>
     </div>
   </div>
