Changed Cooper's face

--- a/Notr/Notr/client/about.html
+++ b/Notr/Notr/client/about.html
@@ -14,7 +14,7 @@
             <p class="top5">Analytical<br>Relator<br>Responsibility<br>Restorative<br>Developer</p>
         </div>
         <div class="col-md-4">
-            <img src="/images/Cooper.jpeg" id="aboutImage"><br>
+            <img src="/images/Cooper.jpg" id="aboutImage"><br>
             <p class="namea">Cooper</p>
             <p class="top5">Competition<br>Input<br>Learner<br>Achiever<br>Intellection</p>
         </div>
