Changed add group page

--- a/Notr/Notr/client/add-groups.html
+++ b/Notr/Notr/client/add-groups.html
@@ -3,11 +3,13 @@
           <div id="accountImage">
           </div>
           <form>
-              Group Name:<br>
-              <input type="text" name="username"><br>
-              Invite (username):<br>
-              <input type="text" name="password">
-              <button href="/calendar" type="button"><a href="/calendar">Submit</a></button>
-          </form>
+            <p>Group Name:</p>
+            <input type="text" name="username" class="username" placeholder="Ex: Runner Club">
+            <br>
+            <p>Invite (username):</p>
+            <input type="text" name="username" class="username" placeholder="Ex: JohnSmith123">
+            <br>
+            <button href="/calendar" type="button" class="submit"><a href="/calendar">Submit</a></button>
+        </form>
         </div>
 </template>
