account page is now login page

--- a/Notr/Notr/client/navbar.html
+++ b/Notr/Notr/client/navbar.html
@@ -19,7 +19,7 @@
             <ul class="nav navbar-nav navbar-left">
               <li class><a href="/home">Home</a></li>
               <li class><a href="/calendar">Calendr</a></li>
-              <li class><a href="/account">Account</a></li>
+              <li class><a href="/account">Login</a></li>
               <li class><a href="/groups">Groups</a></li>
               <li class><a href="/about">About</a></li>
             </ul>
