--- a/Notr/Notr/client/individualGroup.html
+++ b/Notr/Notr/client/individualGroup.html
@@ -6,12 +6,17 @@
 <template name="individualGroup">
   <div class="individualGroupContainer container" id="individualGroupContainer">
     <div id="group">
+      <div id = "aa">
       <p>Group #1 Mathematics</p>
+      <div class="col-md-4"><a href="/individualGroup"><img src="/images/G1.png" id="groupImage"></a></div>
       <br/>
       <p>Members of this group:</p>
       <p>Bob, Sue, Joe, Phil</p>
+      <p>Activities this week: Math club 5:30-6:30 Monday</p>
+      <p><a href = "/calendar">View Calendar</a></p>
       <br/>
-      <a href = "/groups"><button>Back</button></a>
+    </div>
+      <button id = "aaa" href="/groups" type="button" class="submit"><a href="/calendar">Back</a></button>
     </div>
   </div>
 </template>
